...
@Composable
fun ReadingPageContent(
    page: ReadingPage<ReadingContent>,
    library: NoteLibrary,
    modifier: Modifier = Modifier,
    loadedMedia: Map<String, ImageBitmap>? = null,
) = ReadingPageUnits(page, library, modifier.testTag("xnote-reader-page"), loadedMedia)

@Composable
private fun ReadingPageUnits(
    page: ReadingPage<ReadingContent>,
    library: NoteLibrary,
    modifier: Modifier,
...
